--- a/config.json
+++ b/config.json
@@ -1,6 +1,9 @@
 {
   "sheetid": "1697155573409668",
-  "query": "select postName, postType, BC, email, tel, address from postcodeMaster where postcode =%s",
   "key_column_name" : "局所コード",
-  "update_column_names": ["正局所名","正局種","物流センター","局email","局電話","局住所"]
+  "update_column_names": ["正局所名","正局種","物流センター","局email","局電話","局住所"],
+  "dbServer": "10.93.144.7",
+  "dbUser": "root",
+  "dbName": "support_center",
+  "query": "select postName, postType, BC, email, tel, address from postcodeMaster where postcode =%s"
 }
